--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,14 +21,14 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
     <EditText
         android:id="@+id/fullName"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="60dp"
         android:ems="10"
-        android:text="@string/enter_your_full_name"
-        android:hint="Enter your full name"
+        android:hint="@string/enter_your_full_name"
 
         android:inputType="text"
         android:textSize="24sp"
@@ -43,7 +43,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:ems="10"
-        android:hint="Enter your email address"
+        android:hint="@string/enter_your_email_address"
         android:inputType="textEmailAddress"
         android:textSize="24sp"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -58,7 +58,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:ems="10"
-        android:hint="Enter your password"
+        android:hint="@string/enter_your_password"
 
         android:inputType="textPassword"
         android:textSize="24sp"
@@ -89,23 +89,21 @@
             app:layout_constraintTop_toBottomOf="@+id/signIn"
             app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginTop="20dp"
-            android:layout_marginLeft="50dp"/>
+            android:layout_marginStart="50dp"/>
     <TextView
         android:id="@+id/register"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="register"
+        android:text="@string/register"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintTop_toBottomOf="@+id/signIn"
         app:layout_constraintLeft_toRightOf="@+id/forgotpassword"
         android:layout_marginTop="20dp"
-
-
-        android:layout_marginLeft="80dp"/>
+        android:layout_marginStart="80dp"/>
 
     <ProgressBar
-        android:id="@+id/ProgressBar"
+        android:id="@+id/progressBar"
         style="?android:attr/progressBarStyleLarge"
 
         android:visibility="gone"
