--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -71,9 +71,9 @@
         android:layout_width="300dp"
         android:layout_height="70dp"
         android:layout_marginTop="24dp"
-        android:backgroundTint="#0ED6B9"
+        android:backgroundTint="#2F4454"
         android:text="@string/login"
-        android:textColor="@color/white"
+        android:textColor="#FFCB9A"
         android:textSize="26sp"
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -86,6 +86,7 @@
             android:text="@string/forgot_password"
             android:textSize="16sp"
             android:textStyle="bold"
+            android:textColor="#2E151B"
             app:layout_constraintTop_toBottomOf="@+id/signIn"
             app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginTop="20dp"
@@ -97,6 +98,7 @@
         android:text="@string/register"
         android:textSize="16sp"
         android:textStyle="bold"
+        android:textColor="#2E151B"
         app:layout_constraintTop_toBottomOf="@+id/signIn"
         app:layout_constraintLeft_toRightOf="@+id/forgotpassword"
         android:layout_marginTop="20dp"
