--- a/app/src/main/res/layout/activity_register_user.xml
+++ b/app/src/main/res/layout/activity_register_user.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,17 +7,18 @@
     tools:context=".RegisterUser">
     <TextView
         android:id="@+id/banner"
-        android:layout_width="300dp"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:text="@string/food_aid"
         android:textSize="68sp"
-
         android:textStyle="bold"
         android:fontFamily="sans-serif-black"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginTop="50dp">
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="50dp"
+        android:layout_marginStart="30dp">
+
 
     </TextView>
     <EditText
@@ -27,14 +28,12 @@
         android:layout_marginTop="60dp"
         android:ems="10"
         android:hint="Enter your full name"
-
         android:inputType="text"
         android:textSize="24sp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/banner" >
+        android:layout_below="@+id/banner"
+        android:layout_marginStart="30dp"
+    />
 
-    </EditText>
     <EditText
         android:id="@+id/email"
         android:layout_width="300dp"
@@ -42,14 +41,11 @@
         android:layout_marginTop="20dp"
         android:ems="10"
         android:hint="Enter your email"
-
         android:inputType="textEmailAddress"
         android:textSize="24sp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/fullName">
-
-    </EditText>
+        android:layout_below="@+id/fullName"
+        android:layout_marginStart="30dp"
+    />
 
     <EditText
         android:id="@+id/password"
@@ -57,14 +53,38 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:ems="10"
-        android:hint="enter your password"
-
+        android:hint="Enter your password"
         android:inputType="textPassword"
         android:textSize="24sp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/email"/>
+        android:layout_below="@+id/email"
+        android:layout_marginStart="30dp"
+    />
 
+
+    <TextView
+        android:id="@+id/user_type"
+        android:layout_width="70dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:ems="10"
+        android:text="@string/user"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        android:layout_below="@+id/password"
+        android:layout_marginStart="33dp"
+    />
+
+
+    <Spinner
+        android:id="@+id/user_spinner"
+        android:layout_width="130dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/password"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="20dp"
+        android:layout_toEndOf="@+id/user_type"
+        android:backgroundTint="#2F4454"
+         />
 
     <Button
         android:id="@+id/register"
@@ -72,14 +92,14 @@
         android:layout_height="70dp"
         android:layout_marginTop="24dp"
 
-        android:backgroundTint="#0ED6B9"
+        android:backgroundTint="#2F4454"
         android:text="@string/register"
-        android:textColor="@color/white"
+        android:textColor="#FFCB9A"
         android:textSize="26sp"
         android:textStyle="bold"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/password"/>
+        android:layout_below="@+id/user_type"
+        android:layout_marginStart="30dp"
+    />
 
 
 
@@ -92,10 +112,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentBottom="true"
+
+         />
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
