--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,103 +4,140 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/back3"
     tools:context=".MainActivity">
 
-    <TextView
-        android:id="@+id/banner"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        android:text="@string/food_aid"
-        android:textAlignment="gravity"
-        android:textSize="60sp"
-        android:textStyle="bold"
-
-
-
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/fullName"
+        android:id="@+id/txt_fullName"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="60dp"
-        android:ems="10"
+        android:ems="20"
         android:hint="@string/enter_your_full_name"
-
         android:inputType="text"
+        android:backgroundTint="@color/purple_500"
+        android:textColorHint="@color/white"
+
+        android:paddingTop="150dp"
+        android:textColor="#FFFFFF"
         android:textSize="24sp"
+        app:layout_constraintHorizontal_bias="0.434"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/banner" >
+        tools:layout_editor_absoluteY="155dp">
 
     </EditText>
+
     <EditText
-        android:id="@+id/email"
+        android:id="@+id/txt_email"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
+        android:backgroundTint="@color/purple_500"
+
         android:layout_marginTop="20dp"
         android:ems="10"
         android:hint="@string/enter_your_email_address"
         android:inputType="textEmailAddress"
         android:textSize="24sp"
+       android:textColorHint="@color/white"
+        app:layout_constraintHorizontal_bias="0.431"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/fullName">
+        app:layout_constraintTop_toBottomOf="@+id/txt_fullName">
 
     </EditText>
 
     <EditText
-        android:id="@+id/password"
+        android:id="@+id/txt_password"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:backgroundTint="@color/purple_500"
+        android:textColorHint="@color/white"
+
+        android:layout_marginTop="32dp"
         android:ems="10"
         android:hint="@string/enter_your_password"
 
         android:inputType="textPassword"
         android:textSize="24sp"
+        app:layout_constraintHorizontal_bias="0.431"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/email"/>
+        app:layout_constraintTop_toBottomOf="@+id/txt_email"
+        app:passwordToggleEnabled="true" />
+
+    <RadioGroup
+        android:id="@+id/radioGroup"
+        android:visibility="gone"
+        app:layout_constraintTop_toBottomOf="@+id/txt_password"
+
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <RadioButton
+            android:id="@+id/restaurant"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Restaurant Manager"
+            />
+
+
+        <RadioButton
+            android:id="@+id/event"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Event Organiser"
+            />
+        <RadioButton
+            android:id="@+id/children"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Children's Home manager"
+            />
+    </RadioGroup>
+
 
     <Button
         android:id="@+id/signIn"
         android:layout_width="300dp"
         android:layout_height="70dp"
-        android:layout_marginTop="24dp"
+
+        android:layout_marginTop="52dp"
         android:backgroundTint="#0ED6B9"
         android:text="@string/login"
         android:textColor="@color/white"
         android:textSize="26sp"
         android:textStyle="bold"
+        app:layout_constraintHorizontal_bias="0.407"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/password"/>
-        <TextView
-            android:id="@+id/forgotpassword"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/forgot_password"
-            android:textSize="16sp"
-            android:textStyle="bold"
-            app:layout_constraintTop_toBottomOf="@+id/signIn"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginTop="20dp"
-            android:layout_marginStart="50dp"/>
+        app:layout_constraintTop_toBottomOf="@+id/txt_password" />
+
+    <TextView
+        android:id="@+id/forgotpassword"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="50dp"
+        android:layout_marginTop="44dp"
+        android:text="@string/forgot_password"
+        android:textColorHint="@color/white"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/signIn" />
+
     <TextView
         android:id="@+id/register"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColorHint="@color/white"
+        android:layout_marginLeft="90dp"
+        android:layout_marginTop="44dp"
         android:text="@string/register"
-        android:textSize="16sp"
+        android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintTop_toBottomOf="@+id/signIn"
         app:layout_constraintLeft_toRightOf="@+id/forgotpassword"
-        android:layout_marginTop="20dp"
-        android:layout_marginStart="80dp"/>
+        app:layout_constraintTop_toBottomOf="@+id/signIn" />
 
     <ProgressBar
         android:id="@+id/progressBar"
