--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/back3"
     tools:context=".ProfileActivity">
 
     <TextView
@@ -60,6 +61,68 @@
         app:layout_constraintTop_toBottomOf="@+id/fullNameTitle"
         app:layout_constraintLeft_toLeftOf="@+id/emailAddressTitle"
         />
+    <TextView
+        android:id="@+id/PhoneNumberTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Phone Number:"
+        android:textStyle="bold"
+        android:textSize="20sp"
+        android:layout_marginTop="20dp"
+        app:layout_constraintTop_toBottomOf="@+id/fullName"
+        app:layout_constraintLeft_toLeftOf="@+id/greeting"
+        />
+    <TextView
+        android:id="@+id/phone_number"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="30dp"
+
+
+
+
+        android:hint="enter your phone number"
+
+        android:inputType="phone"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
+
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/PhoneNumberTitle"
+        app:layout_constraintLeft_toLeftOf="@+id/fullNameTitle"
+        app:passwordToggleEnabled="true" />
+    <RadioGroup
+        android:id="@+id/radioGroup"
+        android:visibility="gone"
+        app:layout_constraintTop_toBottomOf="@+id/fullName"
+
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:ignore="MissingConstraints">
+
+        <RadioButton
+            android:id="@+id/restaurant"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Restaurant Manager"
+            />
+
+
+        <RadioButton
+            android:id="@+id/event"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Event Organiser"
+            />
+        <RadioButton
+            android:id="@+id/children"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Children's Home manager"
+            />
+    </RadioGroup>
 
 
 
