Authentication User Profile Important.

--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -4,18 +4,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/back3"
+    android:background="@drawable/logo"
     tools:context=".ForgotPassword">
     <EditText
         android:id="@+id/email"
-        android:layout_width="300dp"
+        android:layout_width="320dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:paddingTop="100dp"
         android:ems="10"
         android:hint="@string/enter_your_email_address"
+        android:textStyle="bold"
+        android:textColor="@color/black"
         android:inputType="textEmailAddress"
         android:textSize="24sp"
+        android:drawableStart="@drawable/ic_email_black"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         >
@@ -23,12 +26,12 @@
     </EditText>
     <Button
         android:id="@+id/reset"
-        android:layout_width="300dp"
+        android:layout_width="320dp"
         android:layout_height="70dp"
         android:layout_marginTop="24dp"
-        android:backgroundTint="#0ED6B9"
+        android:backgroundTint="#1F2833"
         android:text="@string/reset"
-        android:textColor="@color/white"
+        android:textColor="#C5CBE3"
         android:textSize="26sp"
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
