--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,43 +4,79 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/back3"
+    android:background="@drawable/logo"
     tools:context=".MainActivity">
 
+    <TextView
+        android:id="@+id/header"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="WE FEED"
+        android:textSize="55sp"
+        android:textStyle="bold"
+        android:textColor="#C5CBE3"
+        android:layout_marginStart="0dp"
+        android:paddingStart="20dp"
+        android:paddingEnd="100dp"
+        android:paddingTop="30dp"
+        android:paddingBottom="0dp"
+
+        >
+
+    </TextView>
+    <TextView
+        android:id="@+id/header2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Catering for the needy in the society!"
+        android:textSize="15sp"
+        android:textStyle="italic"
+        android:textColor="#C5CBE3"
+        android:layout_marginStart="100dp"
+        app:layout_constraintTop_toBottomOf="@+id/header"
+        android:paddingStart="20dp"
+        android:paddingEnd="90dp"
+        android:paddingTop="10dp"
+        android:paddingBottom="20dp">
+
+    </TextView>
 
     <EditText
         android:id="@+id/txt_fullName"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
+        android:layout_width="320dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="60dp"
+        android:backgroundTint="@color/black"
         android:ems="20"
         android:hint="@string/enter_your_full_name"
         android:inputType="text"
-        android:backgroundTint="@color/purple_500"
-        android:textColorHint="@color/white"
-
-        android:paddingTop="150dp"
-        android:textColor="#FFFFFF"
+        android:paddingTop="0dp"
+        android:textColor="#C5CBE3"
+        android:textColorHint="@color/black"
         android:textSize="24sp"
-        app:layout_constraintHorizontal_bias="0.434"
+        android:drawableStart="@drawable/ic_person_black"
+        app:layout_constraintHorizontal_bias="0.3"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/header2"
         tools:layout_editor_absoluteY="155dp">
 
     </EditText>
 
     <EditText
         android:id="@+id/txt_email"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:backgroundTint="@color/purple_500"
-
+        android:layout_width="320dp"
+        android:layout_height="50dp"
         android:layout_marginTop="20dp"
+        android:backgroundTint="@color/black"
         android:ems="10"
         android:hint="@string/enter_your_email_address"
         android:inputType="textEmailAddress"
+        android:textColor="#C5CBE3"
+        android:textColorHint="@color/black"
         android:textSize="24sp"
-       android:textColorHint="@color/white"
-        app:layout_constraintHorizontal_bias="0.431"
+        android:drawableStart="@drawable/ic_email_black"
+        app:layout_constraintHorizontal_bias="0.3"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txt_fullName">
@@ -49,18 +85,18 @@
 
     <EditText
         android:id="@+id/txt_password"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:backgroundTint="@color/purple_500"
-        android:textColorHint="@color/white"
-
-        android:layout_marginTop="32dp"
+        android:layout_width="320dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="20dp"
+        android:backgroundTint="@color/black"
         android:ems="10"
         android:hint="@string/enter_your_password"
-
         android:inputType="textPassword"
+        android:textColor="#C5CBE3"
+        android:textColorHint="@color/black"
         android:textSize="24sp"
-        app:layout_constraintHorizontal_bias="0.431"
+        android:drawableStart="@drawable/ic_security_black"
+        app:layout_constraintHorizontal_bias="0.3"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txt_email"
@@ -92,23 +128,22 @@
             android:id="@+id/children"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Children's Home manager"
+            android:text="Care Facility Manager"
             />
     </RadioGroup>
 
 
     <Button
         android:id="@+id/signIn"
-        android:layout_width="300dp"
-        android:layout_height="70dp"
-
-        android:layout_marginTop="52dp"
-        android:backgroundTint="#0ED6B9"
+        android:layout_width="320dp"
+        android:layout_height="59dp"
+        android:layout_marginTop="55dp"
+        android:backgroundTint="#1F2833"
         android:text="@string/login"
-        android:textColor="@color/white"
+        android:textColor="#C5CBE3"
         android:textSize="26sp"
         android:textStyle="bold"
-        app:layout_constraintHorizontal_bias="0.407"
+        app:layout_constraintHorizontal_bias="0.3"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txt_password" />
@@ -117,12 +152,13 @@
         android:id="@+id/forgotpassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="50dp"
-        android:layout_marginTop="44dp"
+        android:layout_marginTop="35dp"
         android:text="@string/forgot_password"
-        android:textColorHint="@color/white"
+        android:textColor="#C5CBE3"
         android:textSize="20sp"
         android:textStyle="bold"
+        android:paddingStart="20dp"
+        app:layout_constraintHorizontal_bias="0.3"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/signIn" />
 
@@ -130,9 +166,9 @@
         android:id="@+id/register"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColorHint="@color/white"
-        android:layout_marginLeft="90dp"
-        android:layout_marginTop="44dp"
+        android:textColor="#CFCBE3"
+        android:layout_marginStart="75dp"
+        android:layout_marginTop="35dp"
         android:text="@string/register"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -142,7 +178,6 @@
     <ProgressBar
         android:id="@+id/progressBar"
         style="?android:attr/progressBarStyleLarge"
-
         android:visibility="gone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
