--- a/app/src/main/res/layout/activity_register_user.xml
+++ b/app/src/main/res/layout/activity_register_user.xml
@@ -4,28 +4,67 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/back3"
+    android:background="@drawable/logo"
     tools:context=".RegisterUser">
+
+
+    <TextView
+        android:id="@+id/header"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="WE FEED"
+        android:textSize="50sp"
+        android:textStyle="bold"
+        android:textColor="#C5CBE3"
+        android:layout_marginStart="180dp"
+        android:paddingStart="15dp"
+        android:paddingEnd="130dp"
+        android:paddingTop="20dp"
+        android:paddingBottom="0dp"
+
+        >
+
+    </TextView>
+    <TextView
+        android:id="@+id/header2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Catering for the needy in the society!"
+        android:textSize="15sp"
+        android:textStyle="italic"
+        android:textColor="#C5CBE3"
+        android:layout_marginStart="100dp"
+        app:layout_constraintTop_toBottomOf="@+id/header"
+        android:paddingStart="15dp"
+        android:paddingEnd="90dp"
+        android:paddingTop="5dp"
+        android:paddingBottom="10dp">
+
+    </TextView>
 
 
     <EditText
         android:id="@+id/txt_fullName"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:paddingTop="100dp"
-        android:textColorHint="@color/white"
-
+        android:layout_marginTop="27dp"
+        android:paddingTop="10dp"
+        android:textColorHint="@color/black"
+        android:textColor="#C5CBE3"
+        android:textStyle="normal"
         android:ems="10"
         android:hint="@string/enter_your_full_name"
-
         android:inputType="text"
         android:textSize="24sp"
+        android:drawableStart="@drawable/ic_person_black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="124dp">
+        app:layout_constraintTop_toBottomOf="@+id/header2"
+
+        >
 
     </EditText>
 
@@ -33,14 +72,14 @@
         android:id="@+id/txt_email"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:textColorHint="@color/white"
-        android:layout_marginTop="20dp"
+        android:textColorHint="@color/black"
+        android:textColor="#C5CBE3"
+        android:layout_marginTop="13dp"
         android:ems="10"
         android:hint="Enter your email"
-
-
         android:inputType="textEmailAddress"
         android:textSize="24sp"
+        android:drawableStart="@drawable/ic_email_black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -53,13 +92,14 @@
         android:id="@+id/phone_number"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:textColorHint="@color/white"
-        android:layout_marginTop="20dp"
+        android:textColorHint="@color/black"
+        android:textColor="#C5CBE3"
+        android:layout_marginTop="13dp"
         android:ems="10"
         android:hint="@string/enter_your_phone_number"
-
         android:inputType="phone"
         android:textSize="24sp"
+        android:drawableStart="@drawable/ic_phone_black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -72,14 +112,14 @@
         android:id="@+id/txt_password"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:textColorHint="@color/white"
-
-        android:layout_marginTop="20dp"
+        android:textColorHint="@color/black"
+        android:textColor="#C5CBE3"
+        android:layout_marginTop="13dp"
         android:ems="10"
-        android:hint="enter your password"
-
+        android:hint="Enter your password"
         android:inputType="textPassword"
         android:textSize="24sp"
+        android:drawableStart="@drawable/ic_security_black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -91,19 +131,19 @@
     <RadioGroup
         android:id="@+id/radioGroup"
         app:layout_constraintTop_toBottomOf="@+id/txt_password"
-        android:paddingTop="20dp"
-        android:paddingLeft="50dp"
-
+        android:paddingTop="0dp"
+        android:paddingStart="50dp"
+        android:paddingEnd="25dp"
         android:layout_width="wrap_content"
-
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginTop="0dp">
 
         <RadioButton
             android:id="@+id/restaurant"
             android:layout_width="300dp"
-
             android:layout_height="wrap_content"
             android:textSize="20sp"
+            android:textColor="@color/black"
             android:text="Restaurant Manager"
             />
 
@@ -113,14 +153,16 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="20sp"
+            android:textColor="@color/black"
             android:text="Event Organiser"
             />
         <RadioButton
             android:id="@+id/children"
             android:textSize="20sp"
+            android:textColor="@color/black"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Children's Home manager"
+            android:text="Care Facility Manager"
             />
     </RadioGroup>
 
@@ -129,12 +171,10 @@
         android:id="@+id/register"
         android:layout_width="300dp"
         android:layout_height="70dp"
-
-
-        android:layout_marginTop="24dp"
-        android:backgroundTint="#0ED6B9"
+        android:layout_marginTop="27dp"
+        android:backgroundTint="#1F2833"
         android:text="@string/register"
-        android:textColor="@color/white"
+        android:textColor="#C5CBE3"
         android:textSize="26sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -147,7 +187,6 @@
     <ProgressBar
         android:id="@+id/ProgressBar"
         style="?android:attr/progressBarStyleLarge"
-
         android:visibility="gone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
