Event organizer changes

--- a/app/src/main/res/layout/activity_register_user.xml
+++ b/app/src/main/res/layout/activity_register_user.xml
@@ -162,7 +162,7 @@
             android:textColor="@color/black"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Care Facility Manager"
+            android:text="Childrens Home Manager"
             />
     </RadioGroup>
 
