--- a/app/src/main/res/layout/activity_event_organiser.xml
+++ b/app/src/main/res/layout/activity_event_organiser.xml
@@ -5,5 +5,198 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".EventOrganiser">
+    <TextView
+        android:id="@+id/greeting"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="48dp"
+        android:layout_marginTop="24dp"
+        android:text="@string/welcome"
+        android:textColor="@android:color/black"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/header"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:paddingStart="15dp"
+        android:paddingTop="20dp"
+        android:paddingEnd="130dp"
+        android:paddingBottom="0dp"
+        android:text="WE FEED"
+        android:textColor="#C5CBE3"
+        android:textSize="50sp"
+
+        android:textStyle="bold"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="9dp">
+
+    </TextView>
+
+    <TextView
+        android:id="@+id/header2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Catering for the needy in the society!"
+        android:textSize="15sp"
+        android:textStyle="italic"
+        android:textColor="#C5CBE3"
+        android:layout_marginStart="100dp"
+        app:layout_constraintTop_toBottomOf="@+id/header"
+        android:paddingStart="15dp"
+        android:paddingEnd="90dp"
+        android:paddingTop="5dp"
+        android:paddingBottom="10dp">
+
+    </TextView>
+
+
+    <EditText
+        android:id="@+id/event_category"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:hint="Enter event Type"
+        android:textColor="@color/black"
+        android:layout_marginStart="0dp"
+        android:ems="10"
+        android:paddingTop="10dp"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.494"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/header2"
+
+
+        />
+    <Spinner
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/event_spinner"
+
+        app:layout_constraintRight_toRightOf="@+id/event_category"/>
+
+    <EditText
+        android:id="@+id/date"
+        android:layout_width="300dp"
+        android:hint="Enter the date of event"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:textSize="24sp"
+        android:layout_marginTop="13dp"
+        android:ems="10"
+        app:layout_constraintHorizontal_bias="0.494"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/event_category"
+        />
+    <EditText
+        android:id="@+id/location"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:hint="Enter event location"
+        android:layout_marginTop="13dp"
+        android:ems="10"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.494"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/date"/>
+    <TextView
+        android:id="@+id/surplus"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:text="Is there surplus food?"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.494"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/location"
+      />
+
+
+    <RadioGroup
+
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/radioGroup"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.494"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+
+       app:layout_constraintTop_toBottomOf="@+id/surplus"
+
+
+        android:paddingTop="0dp"
+        android:paddingStart="50dp"
+        android:paddingEnd="25dp">
+        <RadioButton
+            android:id="@+id/yes"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:textColor="@color/black"
+            android:text="YES"
+            />
+
+
+        <RadioButton
+            android:id="@+id/no"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:textColor="@color/black"
+            android:text="No"
+            />
+    </RadioGroup>
+    <Button
+        android:id="@+id/add_event"
+        android:layout_width="227dp"
+        android:layout_height="57dp"
+        android:text="Add Event"
+        android:textColor="#C5CBE3"
+        android:backgroundTint="#1F2833"
+        android:onClick="AddEvent"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/radioGroup"/>
+
+    <Button
+        android:id="@+id/signOut"
+        android:layout_width="227dp"
+        android:layout_height="57dp"
+        android:backgroundTint="#1F2833"
+        android:text="@string/logout"
+        android:textColor="#C5CBE3"
+        android:textSize="20sp"
+        android:textStyle="bold"
+
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.494"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/add_event"
+
+        app:layout_constraintVertical_bias="0.375" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
