--- a/app/src/main/res/layout/activity_event_organiser.xml
+++ b/app/src/main/res/layout/activity_event_organiser.xml
@@ -1,13 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
-    android:orientation="vertical"
-    android:background="@drawable/background_1"
-    android:paddingTop="16dp"
     tools:context=".EventOrganiser">
     <TextView
         android:id="@+id/greeting"
@@ -22,173 +18,4 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-
-    <TextView
-        android:id="@+id/schedule"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingTop="20dp"
-   android:layout_gravity="center"
-        android:text="Schedule an event"
-        android:textColor="@color/white"
-
-        android:textSize="24sp"
-        android:textStyle="bold" />
-
-    <EditText
-        android:id="@+id/date"
-        android:layout_width="wrap_content"
-        android:hint="Enter the date of event"
-        android:layout_height="wrap_content"
-     android:layout_marginStart="20dp"
-        android:textSize="24sp"
-        android:layout_marginTop="13dp"
-        android:textColor="@color/white"
-        android:layout_below="@+id/schedule"
-        android:ems="10"
-        android:drawableLeft="@drawable/ic_calendar"
-
-        />
-
-
-    <TextView
-        android:id="@+id/event_category"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:hint="Enter event Category"
-        android:textColor="@color/white"
-        android:layout_marginStart="20dp"
-        android:ems="10"
-        android:paddingTop="10dp"
-        android:textSize="24sp"
-        android:layout_below="@+id/date"
-
-
-
-
-        />
-    <Spinner
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/event_spinner"
-        android:layout_gravity="center"
-
-       />
-    <EditText
-        android:id="@+id/place"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="20dp"
-        android:layout_marginStart="20dp"
-        android:drawableLeft="@drawable/ic_location"
-        android:text="Enter Address"/>
-
-
-    <EditText
-        android:id="@+id/location"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:layout_marginStart="20dp"
-        android:visibility="gone"
-        android:hint="Enter event address"
-        android:textSize="24sp"
-
-
-        />
-
-
-    <TextView
-        android:id="@+id/surplus"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Is there surplus food?"
-        android:layout_marginStart="20dp"
-        android:textColor="#964B00"
-        android:textSize="24sp"
-
-        />
-
-    <RadioGroup
-
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/radioGroup"
-        android:layout_below="@+id/surplus"
-        android:layout_marginStart="20dp"
-
-        android:paddingTop="0dp"
-        android:paddingStart="50dp"
-        android:paddingEnd="25dp">
-        <RadioButton
-            android:id="@+id/yes"
-            android:layout_width="300dp"
-            android:layout_height="wrap_content"
-            android:textSize="20sp"
-            android:textColor="@color/white"
-            android:text="YES"
-            />
-
-
-        <RadioButton
-            android:id="@+id/no"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="20sp"
-            android:textColor="@color/white"
-            android:text="No"
-            />
-    </RadioGroup>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-          android:textColor="#964B00"
-        android:text="If yes how many plates are availabe?"
-        android:textSize="24sp"
-        android:layout_marginStart="20dp"
-        />
-    <EditText
-        android:id="@+id/plates"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="number"
-        android:textSize="24dp"
-        android:textColorHint="@color/white"
-        android:layout_marginStart="20dp"
-        android:hint="Number of plates"/>
-
-
-    <Button
-        android:id="@+id/add_event"
-        android:layout_width="227dp"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/radioGroup"
-
-        android:layout_marginStart="42dp"
-        android:layout_marginTop="50dp"
-        android:backgroundTint="#1F2833"
-        android:onClick="AddEvent"
-        android:text="Add Event"
-        android:textColor="#C5CBE3"
-        android:textSize="20sp"
-        android:textStyle="bold" />
-
-    <Button
-        android:id="@+id/signOut"
-        android:layout_width="227dp"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/add_event"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="42dp"
-        android:layout_marginTop="50dp"
-        android:backgroundTint="#1F2833"
-
-        android:text="LOGOUT"
-        android:textColor="#C5CBE3"
-
-        android:textSize="20sp"
-        android:textStyle="bold"
-        />
-
-
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
